--- a/part4/blogs/package.json
+++ b/part4/blogs/package.json
@@ -26,7 +26,8 @@
   "devDependencies": {
     "eslint": "^8.19.0",
     "jest": "^28.1.3",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
   },
   "jest": {
     "testEnvironment": "node"
