--- a/part5/part2-notes/package.json
+++ b/part5/part2-notes/package.json
@@ -20,7 +20,9 @@
     "deploy": "git push heroku main",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
     "logs:prod": "heroku logs --tail",
-    "eslint": "eslint ."
+    "eslint": "eslint .",
+    "cypress:open": "cypress open",
+    "test:e2e": "cypress run"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +46,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.4.3",
+    "cypress": "^10.7.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "jest-watch-typeahead": "^0.6.5",
     "json-server": "^0.17.0"
   },
