--- a/part6/CourseData/package.json
+++ b/part6/CourseData/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "deep-freeze": "^0.0.1"
+    "deep-freeze": "^0.0.1",
+    "json-server": "^0.17.0"
   }
 }
