--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "cypress": "^10.7.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-jest": "^27.0.1"
+    "eslint-plugin-jest": "^27.0.1",
+    "prettier": "2.7.1"
   }
 }
