--- a/part8/apolloserver/.gitignore
+++ b/part8/apolloserver/.gitignore
@@ -17,6 +17,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+prettier.config.js
+.eslintignore
+.prettierignore
+.eslintrc.js
 
 npm-debug.log*
 yarn-debug.log*
