--- a/part8/apolloserver/package.json
+++ b/part8/apolloserver/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.10.3",
-    "graphql": "^16.6.0"
+    "dotenv": "^16.0.3",
+    "graphql": "^16.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.1"
   }
 }
