--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.10.3",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "mongoose": "^6.7.1"
   },
   "devDependencies": {
     "prettier": "2.7.1"
