--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.10.3",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
-    "mongoose": "^6.7.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.2"
   },
   "devDependencies": {
     "prettier": "2.7.1"
